--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,8 +18,9 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
 
+ 
 environment:
-  sdk: ^3.9.0
+  sdk: '3.10.0-162.1.beta'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,16 +31,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  supabase_flutter: ^2.10.0
-  google_fonts: ^6.2.1
-  photo_view: ^0.15.0
-  image_picker: ^1.1.2
-  image_picker_for_web: ^2.1.12
-  universal_html: ^2.2.3
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  supabase_flutter: any
+  google_fonts: any
+  photo_view: any
+  image_picker: any
+  image_picker_for_web: any
+  universal_html: any
+  cupertino_icons: any
 
 dev_dependencies:
   flutter_test:
